version/0.18/_sources/api/solver/_autosummary/settings/viewfactor_settings.rst.txt
:orphan:

.. _viewfactor_settings:

viewfactor_settings
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.viewfactor_settings.viewfactor_settings
    :show-inheritance:

.. rubric:: Attributes

==============================================================================   =============================================================

Attribute                                                                                                                              Summary

==============================================================================   =============================================================
:ref:`basis <basis>`                                                                                         Basis for viewfactor calculation.

:ref:`method <method_1>`                                                                                    Method for viewfactor calculation.

:ref:`surfaces <surfaces_2>`                                                                                    Surfaces for Hemi-Cube method.

:ref:`smoothing <smoothing>`                                                                                   Smoothing for Hemi-Cube method.

:ref:`resolution <resolution>`                                                                         Resolution for view-factor calculation.

:ref:`separation <separation>`                                                                                Separation for Hemi-Cube method.

:ref:`subdivide <subdivide>`                                                                                   Subdivide for Hemi-Cube method.

:ref:`non_participating_zone_temperature <non_participating_zone_temperature>`       Set temperature for the non-participating boundary zones.

==============================================================================   =============================================================

.. rubric:: Included in:

================   ================

Parent                      Summary

================   ================
:ref:`s2s <s2s>`       's2s' child.

================   ================

