version/0.21/_sources/api/solver/_autosummary/settings/viewfactor_settings.rst.txt
:orphan:

.. _viewfactor_settings:

viewfactor_settings
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.viewfactor_settings.viewfactor_settings
    :show-inheritance:

.. rubric:: Attributes

==============================================================================   =============================================================

Attribute                                                                                                                              Summary

==============================================================================   =============================================================
:ref:`basis <basis>`                                                                                         Basis for viewfactor calculation.

:ref:`method <method_1>`                                                                                    Method for viewfactor calculation.

:ref:`surfaces <surfaces_3>`                                                                                    Surfaces for hemi-cube method.

:ref:`smoothing <smoothing>`                                                                                   Smoothing for hemi-cube method.

:ref:`resolution <resolution>`                                                                         Resolution for view-factor calculation.

:ref:`separation <separation>`                                                            Normalized separation distance for hemi-cube method.

:ref:`subdivide <subdivide>`                                                                Enter number of subdivisions for hemi-cube method.

:ref:`non_participating_zone_temperature <non_participating_zone_temperature>`       Set temperature for the non-participating boundary zones.

==============================================================================   =============================================================

.. rubric:: Included in:

================   ==========================================================

Parent                                                                Summary

================   ==========================================================
:ref:`s2s <s2s>`       Enable/disable the Surface to Surface radiation model.

================   ==========================================================

